prod/pod-1.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: jay
  labels:
    app: nginx
spec:
  containers:
  - name: nginx-container
    image: nginx:1.14.2
    ports:
    - containerPort: 80
