prod/frontend-backend-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    role: frontend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - name: http   # this line is not too important. You cant choose any name here
      containerPort: 80
      protocol: TCP  # this line is not too important 
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:    # this line is not too important 
    role: frontend # this line is not too important
spec:
  selector:
    role: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    role: backend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - name: http  # this line is not too important. You cant choose any name here
      containerPort: 80
      protocol: TCP  # this line is not too important
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:      # this line is not too important 
    role: backend   # this line is not too important 
spec:
  selector:
    role: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80    
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:     # this line is not too important 
    name: mysql   # this line is not too important 
spec:
  selector:
    name: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    name: mysql
spec:
  containers:
    - name: mysql
      image: mysql:latest
      ports:
        - name: http    # this line is not too important 
          containerPort: 3306
          protocol: TCP   # this line is not too important 

#---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: db-test
# spec:
#   podSelector:
#     matchLabels:
#       name: mysql
#   policyTypes:
#   - Ingress
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           role: backend
#     ports:
#     - port: 3306
