prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    # Example annotations for AWS Application Load Balancer (ALB)
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # More annotations can be found in the AWS documentation
spec:
  ingressClassName: alb # Specifies which controller should handle this Ingress
  rules:
    - host: "example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-service # Name of your Kubernetes Service
                port:
                  number: 80 # Port of the Kubernetes Service
